fix!: revert horizontal scroll fix

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -12,5 +12,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: relative;
 }
  
